# waybar-weather

./: Cargo.toml  Makefile  README.md  weather.rs
.github/workflows/: work-branch.yml
