[package]
name = "weather"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "weather"
path = "weather.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
codegen-units = 1 # Reduce number of codegen units to increase optimizations
lto = true        # Enable link-time optimization
opt-level = 'z'   # Optimize for size
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*